; ModuleID = '/home/carl/AnghaBench/libgit2/tests/core/extr_bitvec.c_test_core_bitvec__0.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/core/extr_bitvec.c_test_core_bitvec__0.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_core_bitvec__0() #0 {
  %1 = alloca i32, align 4
  %2 = call i32 @git_bitvec_init(i32* %1, i32 32)
  %3 = call i32 @cl_git_pass(i32 %2)
  %4 = call i32 @set_some_bits(i32* %1, i32 16)
  %5 = call i32 @check_some_bits(i32* %1, i32 16)
  %6 = call i32 @git_bitvec_clear(i32* %1)
  %7 = call i32 @set_some_bits(i32* %1, i32 32)
  %8 = call i32 @check_some_bits(i32* %1, i32 32)
  %9 = call i32 @git_bitvec_clear(i32* %1)
  %10 = call i32 @set_some_bits(i32* %1, i32 64)
  %11 = call i32 @check_some_bits(i32* %1, i32 64)
  %12 = call i32 @git_bitvec_free(i32* %1)
  %13 = call i32 @git_bitvec_init(i32* %1, i32 128)
  %14 = call i32 @cl_git_pass(i32 %13)
  %15 = call i32 @set_some_bits(i32* %1, i32 32)
  %16 = call i32 @check_some_bits(i32* %1, i32 32)
  %17 = call i32 @set_some_bits(i32* %1, i32 128)
  %18 = call i32 @check_some_bits(i32* %1, i32 128)
  %19 = call i32 @git_bitvec_free(i32* %1)
  %20 = call i32 @git_bitvec_init(i32* %1, i32 4000)
  %21 = call i32 @cl_git_pass(i32 %20)
  %22 = call i32 @set_some_bits(i32* %1, i32 4000)
  %23 = call i32 @check_some_bits(i32* %1, i32 4000)
  %24 = call i32 @git_bitvec_free(i32* %1)
  ret void
}

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @git_bitvec_init(i32*, i32) #1

declare dso_local i32 @set_some_bits(i32*, i32) #1

declare dso_local i32 @check_some_bits(i32*, i32) #1

declare dso_local i32 @git_bitvec_clear(i32*) #1

declare dso_local i32 @git_bitvec_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
